Applies sonarlint and IntelliJ inspection fixes.